Добавление запросов у юзера + редактирование запросов локаций
